// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolSpanFc should allow markdown in label 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label md">
      <strong>
        Bold Label
      </strong>
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should hide label when hideLabel is true 1`] = `
<span class="kol-span kol-span--hide-label">
  <span class="kol-span__container">
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should render with badge text 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Label with
      <u>
        Badge
      </u>
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
    <span aria-hidden="true" class="badge-text-hint">
      Badge
    </span>
  </span>
</span>
`;

exports[`KolSpanFc should render with default props 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Default Label
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should render with icons 1`] = `
<span class="kol-span">
  <kol-icon _icons="top-icon" _label="" class="icon top"></kol-icon>
  <span class="kol-span__container">
    <kol-icon _icons="left-icon" _label="" class="icon left"></kol-icon>
    <span class="kol-span__label">
      Label with Icons
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
    <kol-icon _icons="right-icon" _label="" class="icon right"></kol-icon>
  </span>
  <kol-icon _icons="bottom-icon" _label="" class="bottom icon"></kol-icon>
</span>
`;
